SEC plus updates

--- a/index.html
+++ b/index.html
@@ -95,15 +95,17 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-                I’m a U.S. Army Disabled Veteran and IT Support Technician with an active Secret clearance, a CompTIA A+ certification, and a Google Career Certificate in IT Support. I have over two and a half years of hands-on experience in IT operations, hardware support, customer service, network troubleshooting, and working in Active Directory and Entra ID environments. I currently support the U.S. Army Chaplain Center and School, where I provide timely and professional technical support to federal staff and students. I’m skilled at identifying, diagnosing, and resolving a wide range of IT incidents. With a strong foundation in discipline and mission focus from my military background, I bring a detail-oriented and efficient approach to ensuring system reliability and operational support.
+              I’m a U.S. Army Disabled Veteran and security focused IT Support Technician with an active DoD Secret clearance and CompTIA Security+ CE certification. I bring over 2.5 years of hands on experience supporting secure enterprise IT operations within Department of Defense environments, including identity and access management, endpoint support, and compliance focused troubleshooting. I currently support the U.S. Army Chaplain Center and School, where I provide reliable mission critical technical support to federal staff and students. My military background drives a disciplined and detail oriented approach to maintaining secure and dependable systems.
             </p>
               <p class="recents">
                 My most recent technical endeavors:
                 <ul>
-                  <li>As an IT Administrator, I was responsible for over 300 laptops, 15 desktops, and 19 classrooms, supporting audiovisual and IT infrastructure with a maintenance turnaround time of under 42 hours.</li>
-                  <li>I previously worked at The Home Depot Technology Support Center, providing 24/7 Tier 1 support, incident triage, and escalation using ServiceNow while supporting enterprise systems, networks, and security tools in a fast-paced environment.</li>
-                  <li>I earned the CompTIA A+ certification to validate hands-on skills in hardware, networking, mobile devices, virtualization, and troubleshooting.</li>
-                  <li>I am actively pursuing my CompTIA Security+ certification and expect to complete it by Fall 2025.</li>
+                  <li>Supporting secure Windows endpoints and enterprise services within a DoD environment at the U.S. Army Chaplain Center and School.</li>
+                  <li>Managing user accounts, access, and device objects in Active Directory and Microsoft Entra ID to support identity lifecycle and access control.</li>
+                  <li>Administering and troubleshooting Azure Virtual Desktop onboarding, access, and authentication workflows for federal users.</li>
+                  <li>Assisting with DISA STIG aligned compliance efforts, including endpoint eligibility validation and baseline configuration support.</li>
+                  <li>Collaborating with system administrators and network engineers to resolve access, configuration, and endpoint related issues.</li>
+                  <li>Previously supported and maintained over 300 Windows laptops and enterprise classrooms, ensuring operational readiness and timely issue resolution.</li>
                 </ul>
               </p>
             <!-- <p class="recents">
@@ -119,15 +121,15 @@
           <div class="stack-container">
             <div class="the-stack">
             <img 
-            src="images/remote-desktop-48.png"
+            src="images/icons8-microsoft-office-2019-50-2.png"
             style="width: 50px; height: 50px"/>
-            <p class="stack">Remote<br>Desktop</p>
+            <p class="stack">Microsoft<br>Entra ID</p>
           </div>
             <div class="the-stack">
             <img 
-            src="images/vmware-50.png"
+            src="images/icons8-microsoft-intune-48.png"
             style="width: 50px; height: 50px"/>
-            <p class="stack">VMWare</p>
+            <p class="stack">Microsoft<br>Intune</p>
           </div>
             <div class="the-stack">
             <img 
@@ -149,9 +151,9 @@
           </div>
             <div class="the-stack">
               <img 
-              src="images/macos-50.png"
+              src="images/icons8-secure-laptop-53.png"
               style="width: 50px; height: 50px"/>
-              <p class="stack">Mac OS</p>
+              <p class="stack">PAWs</p>
             </div>
             <div class="the-stack">
               <img 
@@ -186,14 +188,21 @@
       <div class="container">
         <h2 class="mb-4">Certifications</h2>
         <div class="row justify-content-center">
-  <div class="col-auto text-center">
-    <img
-      class="fit-log mt-2"
-      src="images/comptiaaplus.png"
-      style="width: 550px; height: 400px" />
-      <h3 class="comptia">CompTIA A+</h3>
-  </div>
-</div>
+          <div class="col-md-6 text-center">
+            <img
+              class="fit-log mt-2"
+              src="images/comptiaaplus.png"
+              style="width: 450px; height: 325px" />
+            <h3 class="comptia">CompTIA A+</h3>
+          </div>
+          <div class="col-md-6 text-center">
+            <img
+              class="fit-log mt-2"
+              src="images/secplus.JPG"
+              style="width: 450px; height: 325px" />
+            <h3 class="comptia">CompTIA Security+ CE</h3>
+          </div>
+        </div>
       </div>
     </div>
    <div id="projects" class="projects">
