School removal updates

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
           <div class="col-md-7">
             <h4>Nice to meet you!</h4>
             <p>
-              I’m a U.S. Army Disabled Veteran and security focused IT Support Technician with an active DoD Secret clearance and CompTIA Security+ CE certification. I bring over 2.5 years of hands on experience supporting secure enterprise IT operations within Department of Defense environments, including identity and access management, endpoint support, and compliance focused troubleshooting. I currently support the U.S. Army Chaplain Center and School, where I provide reliable mission critical technical support to federal staff and students. My military background drives a disciplined and detail oriented approach to maintaining secure and dependable systems.
+              I’m a U.S. Army Disabled Veteran and security focused IT Support Technician with an active DoD Secret clearance and CompTIA Security+ CE certification. I bring over 2.5 years of hands on experience supporting secure enterprise IT operations within Department of Defense environments, including identity and access management, endpoint support, and compliance focused troubleshooting. I currently support the U.S. Army Institute for Religious Leadership, where I provide reliable mission critical technical support to federal staff and students. My military background drives a disciplined and detail oriented approach to maintaining secure and dependable systems.
             </p>
               <p class="recents">
                 My most recent technical endeavors:
                 <ul>
-                  <li>Supporting secure Windows endpoints and enterprise services within a DoD environment at the U.S. Army Chaplain Center and School.</li>
+                  <li>Supporting secure Windows endpoints and enterprise services within a DoD environment at the U.S. Army Institute for Religious Leadership.</li>
                   <li>Managing user accounts, access, and device objects in Active Directory and Microsoft Entra ID to support identity lifecycle and access control.</li>
                   <li>Administering and troubleshooting Azure Virtual Desktop onboarding, access, and authentication workflows for federal users.</li>
                   <li>Assisting with DISA STIG aligned compliance efforts, including endpoint eligibility validation and baseline configuration support.</li>
@@ -191,16 +191,16 @@
           <div class="col-md-6 text-center">
             <img
               class="fit-log mt-2"
-              src="images/comptiaaplus.png"
+              src="images/secplus.JPG"
               style="width: 450px; height: 325px" />
-            <h3 class="comptia">CompTIA A+</h3>
+            <h3 class="comptia">CompTIA Security+ CE</h3>
           </div>
           <div class="col-md-6 text-center">
             <img
               class="fit-log mt-2"
-              src="images/secplus.JPG"
+              src="images/comptiaaplus.png"
               style="width: 450px; height: 325px" />
-            <h3 class="comptia">CompTIA Security+ CE</h3>
+            <h3 class="comptia">CompTIA A+</h3>
           </div>
         </div>
       </div>
