--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="resume" onclick="location.href='images/Marissa Mack Sys Admin Resume.pdf'">Resume</a>
+            <a class="nav-link" id="resume" onclick="location.href='images/Marissa Mack IT Security.pdf'">Resume</a>
           </li>
         </ul>
       </div>
